--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-07 12:44:07
+lastsearch = 2024-08-07 16:34:20
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -352,9 +352,9 @@ title = Bàn đạp phanh ô tô rung lắc phải làm sao?
 url = http://baoyenbai.com.vn/227/325068/Ban-dap-phanh-o-to-rung-lac-phai-lam-sao.aspx
 
 [atgt.baogiaothong.vn]
-match = -200.0%%
-title = Khoảnh khắc người đàn ông đi xe máy bị tàu hỏa đâm tử ...
-url = https://atgt.baogiaothong.vn/khoanh-khac-nguoi-dan-ong-di-xe-may-bi-tau-hoa-dam-tu-vong-o-ha-noi-19224080115434538.htm
+match = -143.8%%
+title = Nửa quả đồi sạt xuống QL279 gây tắc nghẽn cục bộ
+url = https://atgt.baogiaothong.vn/nua-qua-doi-sat-xuong-ql279-gay-tac-nghen-cuc-bo-192240807151117655.htm
 
 [cafebiz.vn]
 match = -200.0%%
