--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-07 15:58:35
+lastsearch = 2024-08-07 16:36:29
 
 [munghoangphat.com]
-match = -24.0%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = 12.0%%
+title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-xanh.html
 
 [tiki.vn]
 match = -28.0%%
@@ -17,14 +17,14 @@ title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [shopee.vn]
-match = 4.0%%
-title = Màn chụp tự bung đỉnh vuông gia khánh loại 1 ...
-url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-gia-khánh-loại-1-Việt-Nam-1.6m-1.8m-2m-cao-1m70-mùng-chụp-đỉnh-rộng-hàng-đẹp-i.275105053.4839350056
+match = -12.0%%
+title = mùng chụp tự bung đỉnh vuông giá tốt Tháng 8, 2024
+url = https://shopee.vn/search?keyword=mùng chụp tự bung đỉnh vuông
 
 [www.mungbaobao.com]
-match = 24.0%%
-title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
-url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
+match = 48.0%%
+title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
+url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-rong-1m6-x-2m-bao-bao.html
 
 [www.diepxuan.com]
 match = 100.0%%
