--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-07 16:01:22
+lastsearch = 2024-08-07 16:31:35
 
 [en.wikipedia.org]
 match = -31.2%%
@@ -112,9 +112,9 @@ title =
 url = https://www.koreanclass101.com/korean-age/
 
 [www.tiktok.com]
-match = 4.3%%
-title = Japan Olympics Ceremony
-url = https://www.tiktok.com/discover/japan-olympics-ceremony
+match = -13.0%%
+title = Triple H Talks about Jacob Fatu
+url = https://www.tiktok.com/discover/triple-h-talks-about-jacob-fatu
 
 [www.unikorea.go.kr]
 match = -113.0%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=b5919fffce7396f9&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiJruS7wuKHAxVaEFkFHfgvLs0QsZYEegQIUxAC
+url = https://www.google.com/search?sca_esv=b5919fffce7396f9&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiM-6mcyeKHAxVWElkFHYkZNN8QsZYEegQIUBAC
 
 [produccionesitaca.es]
 match = -21.4%%
