--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-07 11:50:06
+lastsearch = 2024-08-07 16:41:22
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -122,9 +122,9 @@ title = EBB and Flow, November 1950-July 1951 - DTIC
 url = https://apps.dtic.mil/sti/tr/pdf/ADA232745.pdf
 
 [www.tiktok.com]
-match = 4.3%%
-title = South Korea League of Legends
-url = https://www.tiktok.com/discover/south-korea-league-of-legends
+match = -91.3%%
+title = I got a Wingman plushie from Riot. Thanks Riot Games ...
+url = https://www.tiktok.com/@oldnoobgaming/video/7255693627396033794?lang=en
 
 [30rates.com]
 match = -52.2%%
