--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-08-07 15:45:46
+lastsearch = 2024-08-07 16:29:46
 
 [shopee.vn]
 match = -52.4%%
@@ -34,12 +34,12 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -66.7%%
 title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOoq-6a3D_wreHXPXdqWZiliJT-JMHUpHOvjgYVoN_EWOCdWQ1QHO
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [comehome.com.vn]
-match = -119.0%%
-title = 15 Mẫu giường ngủ đôi kích thước chuẩn, đẹp, giá rẻ nhất ...
-url = https://comehome.com.vn/blog/post/giuong-ngu-doi
+match = -90.5%%
+title = Kích thước giường ngủ tiêu chuẩn, thông dụng nhất 2024
+url = https://comehome.com.vn/blog/post/kich-thuoc-giuong-ngu
 
 [www.kymdan.com]
 match = 14.3%%
