--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-07 18:50:33
+lastsearch = 2024-08-07 20:03:34
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -14,7 +14,7 @@ url = https://www.diepxuan.com/chan-ga-goi-mau.html
 [shop.chanrathanhthuy.com]
 match = 10.7%%
 title = Bộ Ga Bọc Cotton Thêu Chân Màu Nâu Đất (12)
-url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat?srsltid=AfmBOopDf_gQZGjp3vo0-sL1F0eX_3f7WCNe3DSdknfBibEdTNTq2N3e
+url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat
 
 [shopee.vn]
 match = -21.4%%
@@ -42,14 +42,14 @@ title = Chăn Ga Gối Nệm Đẹp, Cao Cấp, Giá Rẻ - JYSK.vn
 url = https://jysk.vn/bo-vo-chan-goi-ga
 
 [songhong.info]
-match = 10.7%%
-title = Mẫu chăn ga gối cao cấp mã mầu UC22-019
-url = https://songhong.info/chan-ga-goi-uc019
+match = 3.6%%
+title = Bộ chăn ga gối cao cấp Urban mã UC22-020 -
+url = https://songhong.info/chan-ga-goi-uc020
 
 [cuahangchangagoidem.com]
-match = -7.1%%
-title = 3 Bộ Chăn Ga Gối Đệm Màu Xám Sang Trọng Với Giá Tốt☑️
-url = https://cuahangchangagoidem.com/chan-ga-goi-dem-mau-xam/
+match = -21.4%%
+title = 6 Mẫu Chăn Ga Gối Đệm Màu Vàng Đẹp Khiến Bạn Mê Say
+url = https://cuahangchangagoidem.com/chan-ga-goi-dem-mau-vang/
 
 [goni.vn]
 match = 7.1%%
