--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-07 19:34:38
+lastsearch = 2024-08-07 20:03:15
 
 [batdongsan.com.vn]
 match = -240.0%%
 title = Bán đất tại Đường Lý Chiêu Hoàng, Phường An Lạc, Quận Bình ...
-url = https://batdongsan.com.vn/ban-dat-duong-ly-chieu-hoang-phuong-an-lac-6/gia-tu-5-ty-den-7-ty-dt-tu-150m2-den-200m2
+url = https://batdongsan.com.vn/ban-dat-duong-ly-chieu-hoang-phuong-an-lac-6/gia-tu-5-ty-den-7-ty-dt-tu-250m2-den-300m2
 
 [vinatools.com]
 match = -200.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -66.7%%
-title = Baïeta - Cocktails & Chic tapas
-url = https://www.facebook.com/baietasaigon.restaurant/
+match = -73.3%%
+title = CHIA SẼ và CHO THUÊ MẶT BẰNG VỈA HÈ
+url = https://www.facebook.com/groups/301813963912725/
 
 [lacvietauction.vn]
 match = -80.0%%
@@ -272,14 +272,14 @@ title = [VIDEO] The Dial of Destiny: Astrology of July & August as well ...
 url = https://www.lainielovedalby.com/reverent-reflections-blog/2023/7/17/video-the-dial-of-destiny-astrology-of-july-amp-august-as-well-as-a-big-announcement
 
 [jhouse.vn]
-match = -213.3%%
-title = Rooftop 1-BR Apartment With Terrace On Nguyen Dinh ...
-url = https://jhouse.vn/en/property/rooftop-1-br-apartment-with-terrace-on-nguyen-dinh-chieu-street/
+match = -293.3%%
+title = International Plaza | Modern 1-BR Apartment City View On Floor ...
+url = https://jhouse.vn/en/property/international-plaza-modern-1-br-apartment-city-view-on-floor-11th/
 
 [www.vietnam-sketch.com]
 match = -426.7%%
 title = 地図（ホーチミン市・工業団地） 今月の広告索引 - ベトナムスケッチ
-url = https://www.vietnam-sketch.com/wp-content/uploads/2014/10/112014-South-map.pdf
+url = https://www.vietnam-sketch.com/wp-content/uploads/2015/02/032015-South-map.pdf
 
 [partner.hdbank.com.vn]
 match = 6.7%%
@@ -299,7 +299,7 @@ url = https://quyhoach.xaydung.gov.vn/Images/editor/files/UBND-TPVT/TM-LS_compre
 [www.asc-aqua.org]
 match = -116.7%%
 title = Sheet1
-url = https://www.asc-aqua.org/wp-content/uploads/2022/09/2022_09-CoC-holders-with-scope.xlsx
+url = https://www.asc-aqua.org/wp-content/uploads/2023/04/Copy-of-2023_03-CoC-holders-with-scope.xlsx
 
 [diaoc24gio.com]
 match = -133.3%%
