--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-08-07 19:33:58
+lastsearch = 2024-08-07 20:02:55
 
 [www.everonvn.vn]
-match = 7.4%%
-title = ĐỆM LÒ XO EVERON, KING KOIL
-url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
+match = 31.1%%
+title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
 
 [everonkorea.com]
-match = 23.4%%
-title = Đệm lò xo Kingkoil Cloud Firm cao 27cm - Everon Korea
-url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-firm/
+match = 31.8%%
+title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm
+url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 
 [demxanh.com]
 match = 27.9%%
 title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
+url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html?srsltid=AfmBOoqIdrXtuhg_L6yfc0h5nEtJ6Bo--YGYJkITUWEvmOsh0vWRM80z
 
 [nemragoi.com]
 match = 37.9%%
@@ -34,12 +34,12 @@ url = https://everon.online/collections/dem-lo-xo-king-koil
 [www.diepxuan.com]
 match = 36.2%%
 title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html?srsltid=AfmBOoo9epGhWwfvtvBpq2Aiavc1CM5Do9g7AlmF77Uzz7YOnajHhJ6a
 
 [www.everonqb.com]
 match = 57.4%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
-url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
+title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
+url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
 
 [everonvn.com.vn]
 match = 42.6%%
@@ -69,5 +69,5 @@ url = https://thegioinemshop.com/1696659444.html
 [everon.com.vn]
 match = 21.3%%
 title = ĐỆM LÒ XO KINGKOIL CLOUD FIRM | Khuyến Mại 77 Xã ...
-url = https://everon.com.vn/dem-lo-xo-kingkoil-cloud-firm/
+url = https://everon.com.vn/dem-lo-xo-kingkoil-cloud-firm/?srsltid=AfmBOop39kOIZ3a_tDu0NG6-eGnsUv2a0zGlC2ZI4Jpuggc_AUGJmgUW
 
