--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-08-07 18:57:45
+lastsearch = 2024-08-07 20:08:11
 
 [shopee.vn]
 match = -146.7%%
@@ -12,9 +12,9 @@ title = bộ thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=bộ thảm trải ghế
 
 [ghedagiago.com]
-match = -146.7%%
-title = TOP 45 MẪU GHẾ ĐÁ CÔNG VIÊN GIÁ TỐT TẠI XƯỞNG ...
-url = https://ghedagiago.com/danh-muc/ghe-da-cong-vien/
+match = -133.3%%
+title = 55+ MẪU GIÁ BÀN GHẾ ĐÁ GIẢ GỖ RẺ ĐẸP NHẤT 2024
+url = https://ghedagiago.com/danh-muc/ban-ghe-da-gia-go/
 
 [ghedatruongan.com]
 match = -80.0%%
