--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-08-07 17:32:31
+lastsearch = 2024-08-07 21:56:43
 
 [demxanh.com]
 match = -39.1%%
@@ -22,9 +22,9 @@ title = Chiếu trúc cao bằng 150*190
 url = https://uannga.vn/index.php/shops/chieu-mat/chieu-truc-cao-bang-150-190.html
 
 [shopee.vn]
-match = -52.2%%
-title = Chiếu Trúc Tre Cao Bằng Xịn Các Cỡ 0.8m/0.9m/1m/1.2 ...
-url = https://shopee.vn/Chiếu-Trúc-Tre-Cao-Bằng-Xịn-Các-Cỡ-0.8m-0.9m-1m-1.2m-1.4m-1.5m-1.6m-1.8m-2m-i.182611643.17934077095
+match = 17.4%%
+title = Chiếu cao bằng Việt Nam 1.2m x 1.95
+url = https://shopee.vn/Chiếu-cao-bằng-Việt-Nam-1.2m-x-1.95-i.79170238.1588526215
 
 [chuyenhangviet.com]
 match = -43.5%%
