--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-08-07 14:52:08
+lastsearch = 2024-08-07 21:54:04
 
 [tiki.vn]
 match = 16.0%%
@@ -12,9 +12,9 @@ title = Mua Chiếu trúc Đài Loan mặt trúc mặt lụa
 url = https://tiki.vn/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-p10764702.html?spid=58961412
 
 [www.tiktok.com]
-match = 4.0%%
-title = Phim Mai Có Chiếu Ở Taiwan Không
-url = https://www.tiktok.com/discover/phim-mai-có-chiếu-ở-taiwan-không?lang=en
+match = -80.0%%
+title = Phim MAI của Trấn Thành sẽ được khởi chiếu tại Đài Loan ...
+url = https://www.tiktok.com/@danghoaly86/video/7348795087473609989
 
 [shopee.vn]
 match = -28.0%%
@@ -27,9 +27,9 @@ title = Lừa đảo xuất khẩu lao động, người đàn ông Đài Loan l
 url = https://congly.vn/lua-dao-xuat-khau-lao-dong-nguoi-dan-ong-dai-loan-linh-12-nam-tu-399654.html
 
 [www.facebook.com]
-match = 12.0%%
-title = Xin chào, tôi ở Đài Loan | Kaohsiung
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+match = -60.0%%
+title = Du lịch tự do Đài Loan | Ngày 12 tháng 4 phim Mai của ...
+url = https://www.facebook.com/groups/867394263291528/posts/ngày-12-tháng-4-phim-mai-của-trấn-thành-sẽ-được-công-chiếu-toàn-đài-loan-với-tiê/7807974442566774/
 
 [vi.wikipedia.org]
 match = 6.7%%
@@ -67,9 +67,9 @@ title = Phim Đài Loan
 url = https://tvmotchill.com/quoc-gia/phim-dai-loan/
 
 [www.youtube.com]
-match = -52.0%%
-title = Phim Lần Thứ Hai Mình Yêu Nhau tập 12 phim Đài Loan
-url = https://www.youtube.com/watch?v=6BYzIBOpKLw
+match = -108.0%%
+title = 20240412 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞
+url = https://www.youtube.com/watch?v=9v-wyYZ3zkA
 
 [znews.vn]
 match = -40.0%%
@@ -295,4 +295,9 @@ url = https://toptour.com.vn/mui-gio-dai-loan-nhu-the-nao-so-voi-viet-nam
 match = -64.0%%
 title = Thông điệp đến từ Đất mẹ Đài Loan - Bảo tàng thổ nhưỡng ...
 url = https://www.taiwan-panorama.com/vi/Articles/Details?Guid=8fe4108f-61c9-4bd2-9cc7-a8fbd45155e9&CatId=10&postname=Thông điệp đến từ Đất mẹ-Đài Loan - Bảo tàng thổ nhưỡng thế giới
+
+[phatsuonline.vn]
+match = -60.0%%
+title = Phật sự Quốc Tế Đài Loan: Tăng Ni Cư sĩ & Doanh Nhân ...
+url = https://phatsuonline.vn/phat-su-quoc-te-dai-loan-tang-ni-cu-si-and-doanh-nhan-viet-nam-trai-nghiem-giao-luu-tap-doan-phuc-tri-tai-dai-loan-thang-07-2024-82
 
