--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-08-07 19:31:51
+lastsearch = 2024-08-07 21:46:29
 
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 18
-url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html?srsltid=AfmBOopARt3slF22HGqUNwaXgZhha5MME-UNFsmUyTnBw0HYJWalj8c6
+url = https://erado.vn/giuong-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
 
 [shopee.vn]
 match = -105.0%%
@@ -74,7 +74,7 @@ url = https://noithathofaco.net/san-pham/bo-giuong-tu-trang-nhap-khau-hfc-bgt-r0
 [everonvn.com.vn]
 match = -75.0%%
 title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOooEHKftqIBoL-9YySNyhVplbGU0C8c8VhCoKC6D0N9CkqsDUVhc
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [noithatdaithanh.vn]
 match = -35.0%%
