--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-07 20:46:29
+lastsearch = 2024-08-07 21:53:44
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -74,7 +74,7 @@ url = https://www.cruisetimetables.com/tuicruises-10apr2024.html
 [www.lightology.com]
 match = -200.0%%
 title = Tui Pendant by David Trubridge - Lightology
-url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441&srsltid=AfmBOorms5Xm8UduGJiSLjWTkNyWjYrKEuohi8Yg4LZ0TxLQTCovs4hQ
+url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441
 
 [vitalimpacts.org]
 match = -91.7%%
@@ -82,9 +82,9 @@ title = Tui De Roy. Blue-footed Booby.
 url = https://vitalimpacts.org/products/tui-deroy-blue-footed-booby
 
 [www.flightaware.com]
-match = -275.0%%
-title = BY16 (TOM16) TUI Airways Flight Tracking and History
-url = https://www.flightaware.com/live/flight/TOM16
+match = -308.3%%
+title = BY16 (TOM16) TUI Airways Flight Tracking and History ...
+url = https://www.flightaware.com/live/flight/TOM16/history/20240623/0920Z/EGKK/KMLB
 
 [www.hotelmanagement-network.com]
 match = -258.3%%
@@ -107,8 +107,8 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -258.3%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / ...
 url = https://www.tui.co.uk/
 
 [maritime-executive.com]
