--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-07 16:18:33
+lastsearch = 2024-08-07 22:30:36
 
 [tiki.vn]
 match = -138.9%%
 title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-la-160-x-200-cm-p7855499.html
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
 
 [nemxinh.net]
 match = 50.0%%
@@ -52,9 +52,9 @@ title = Bộ Chăn Ga Gối Làm Mát Gấu Hóme Cóordy SS24 ...
 url = https://aeoneshop.com/product/29675/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xam
 
 [everonvn.com.vn]
-match = 16.7%%
-title = Bộ Everon Epm-19061
-url = https://everonvn.com.vn/everon/752/bo-everon-epm19061
+match = -105.6%%
+title = Bộ Everon Esm-20011 - chăn ga gối đệm Everon
+url = https://everonvn.com.vn/everon/809/bo-everon-esm-20011
 
 [www.everonvni.vn]
 match = -77.8%%
@@ -72,9 +72,9 @@ title = Bộ Drap phủ ViVaBon SL102 (160x200) - draphoangcuong
 url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-vivabon-sl102-160x200-sp202129.html
 
 [antbedding.com]
-match = -33.3%%
-title = Bộ Chăn Ga Gối Modal Cotton MC13
-url = https://antbedding.com/bo-chan-ga-goi-modal-cotton-mc13
+match = 33.3%%
+title = Bộ Chăn Ga Gối Eu06
+url = https://antbedding.com/bo-chan-ga-goi-eu06
 
 [www.mym.com.vn]
 match = -57.1%%
@@ -137,9 +137,9 @@ title = FITIN
 url = https://www.facebook.com/fitin.vn/
 
 [www.diepxuan.com]
-match = -38.9%%
-title = Bộ ga phủ WarmDream 160x200 HQ - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-phu-warmdream-160x200-hq.html
+match = 27.8%%
+title = Bộ phủ màu 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-phu-mau-180x200.html
 
 [dovihome.vn]
 match = 0.0%%
