--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-07 21:16:16
+lastsearch = 2024-08-07 22:37:55
 
 [demxanh.com]
-match = -60.9%%
-title = Chăn lông cừu là gì? Nên chọn loại chăn lông cừu nào?
-url = https://demxanh.com/chan-long-cuu-la-gi-nen-chon-loai-chan-long-cuu-nao.html
+match = 26.3%%
+title = Chăn lông 5kg mã 02
+url = https://demxanh.com/chan-long-5kg-ma-02.html
 
 [shopee.vn]
 match = 43.5%%
@@ -152,8 +152,8 @@ title = SUY TỦY XƯƠNG
 url = https://bthh.org.vn/74/suy-tuy-xuong-282.html
 
 [www.staleyfarmshomeskc.com]
-match = -143.5%%
-title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
+match = -104.3%%
+title = News Staley Farms Private Golf Community Kansas City MO
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn--b1aktidr.xn--p1ai/54138796bzlqkz-modelscomk3fe43a
 
 [nhidong.org.vn]
