--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-07 20:00:01
+lastsearch = 2024-08-07 22:43:46
 
 [chieutrucsaigon.com]
 match = -8.3%%
@@ -47,9 +47,9 @@ title = BST CHIẾU TRÚC HẠT ĐEN CHÍNH HÃNG - Hà Nội
 url = https://thegioidemtot.vn/392-chieu-truc-hat-den.html
 
 [www.youtube.com]
-match = -54.2%%
-title = 🔴TRỰC TIẾP 🔴THỜI SỰ 19H VTV1 - 20/3/2024 | ĐÀI ...
-url = https://www.youtube.com/watch?v=Pa-TmxiqHBk
+match = -75.0%%
+title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp CHIẾU SIÊU ...
+url = https://www.youtube.com/watch?v=FFV6Oqxq3Ds
 
 [chieutrucxinh.weebly.com]
 match = -70.8%%
