--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-07 18:52:36
+lastsearch = 2024-08-07 22:40:59
 
 [www.everonvn.vn]
-match = -105.0%%
-title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
-url = https://www.everonvn.vn/san-pham/dem-everon.html
+match = 20.0%%
+title = Đệm bông Everon 1m, 1m2, 1m4
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m-1m2-1m4.html
 
 [everon.vip]
 match = 50.0%%
@@ -33,7 +33,7 @@ url = https://suongtuyet.com/nem-bong-ep-everon
 
 [demxanh.com]
 match = -110.0%%
-title = Bảng giá đệm bông ép Everhome khuyến mãi mới nhất 2024
+title = Bảng giá đệm bông ép Everhome khuyến mãi mới nhất ...
 url = https://demxanh.com/bang-gia-dem-bong-ep-everhome-nam-2023.html
 
 [everon365.vn]
